framework-res.apk: values
Set up image and text for Recovery Reboot Button

Signed-off-by: djb77 <dwayne.bakewell@gmail.com>

--- a/S7_Files/framework-res.apk/res/values/public.xml
+++ b/S7_Files/framework-res.apk/res/values/public.xml
@@ -6667,6 +6667,9 @@
     <public type="string" name="charging_connected_via_usb" id="0x01040a8a" />
     <public type="string" name="config_tspstate_threshold" id="0x01040a8b" />
     <public type="string" name="wfcSpnFormat" id="0x010408f3" />
+
+    <public type="string" name="tw_ic_do_rebootrecovery" id="0x01040a8d" />
+
     <public type="dimen" name="app_icon_size" id="0x01050000" />
     <public type="dimen" name="thumbnail_height" id="0x01050001" />
     <public type="dimen" name="thumbnail_width" id="0x01050002" />
@@ -11150,6 +11153,9 @@
     <public type="drawable" name="tw_textfield_default_mtrl_alpha" id="0x01080ad3" />
     <public type="drawable" name="wb_hover_button" id="0x01080afd" />
     <public type="drawable" name="wb_tap_button" id="0x01080afe" />
+
+    <public type="drawable" name="tw_ic_do_rebootrecovery" id="0x01080b0f" />
+
     <public type="layout" name="activity_list_item" id="0x01090000" />
     <public type="layout" name="expandable_list_content" id="0x01090001" />
     <public type="layout" name="preference_category" id="0x01090002" />
